Avoiding overlapping company icon

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,7 +146,7 @@ a {
 
 .grid-icon {
   height: 60px;
-  max-width: 200px;
+  max-width: 172px;
   object-fit: contain;
 }
 
